full stack project done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-bootheader></app-bootheader>
 
+<app-navbar>
 
-<app-bootview></app-bootview>
+</app-navbar>
+
+<router-outlet></router-outlet>
